syntax = "proto3";

package movieinfo.common;

option go_package = "github.com/3inchtime/movieinfo/proto/common";

// 简化的错误代码 - 只保留最常用的错误类型
enum ErrorCode {
  // 通用错误
  UNKNOWN_ERROR = 0;
  INVALID_ARGUMENT = 1;
  NOT_FOUND = 2;
  ALREADY_EXISTS = 3;
  INTERNAL_ERROR = 4;
  
  // 认证相关错误
  UNAUTHENTICATED = 100;
  PERMISSION_DENIED = 101;
  
  // 业务逻辑错误
  BUSINESS_ERROR = 200;
}

// 简化的错误详情
message ErrorDetail {
  ErrorCode code = 1;       // 错误代码
  string message = 2;       // 错误消息
  string field = 3;         // 相关字段（可选）
}